# couscous

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.zig  configure.bat  fbuild.bff  init.bat  run.bat  shader.bat  todo.md
code/: build.bat  charmap.cpp  couscous.cpp  couscous.h  couscous.hpp  couscous.natvis  couscous_assembler.cpp  couscous_tests.cpp  couscousc.cpp  main.cpp  mtb.h  mtb.hpp  testprogram.cpp  win32_couscous.cpp  win32_main.cpp
cpp/: .gitignore  build.bat  configure.bat  generate_code.ps1
cpp/src/: couscous.cpp  couscous.h  couscous_mtb.h  couscous_tests.cpp  couscousc.cpp  generate_code.ps1  mtb.h  mtb_rng.h  win32_main.cpp
docs/: chip8.xls  chip8_instructions.rbcstn59  resources.md
lib/: pull_subtrees.bat
misc/: asm8.sublime-syntax
roms/: FX0A.txt  FX29.asm8  FX29.txt  README.md  TIMING.asm8  TIMING.ch8  TIMING.txt
roms/Manuzor/: FX0A.asm8  FX0A.ch8  FX29.ch8  README.md  TIMING.asm8  TIMING.ch8
roms/zophar.net/: README.md
src/: NOROM.asm8  chip8.zig  chip8_asm.zig  chip8_charmap.zig  couscous.cpp  couscous.natvis  couscousc.cpp  main.zig  mtb.h  shader.glsl  shader.zig  win32_main.cpp
src/examples/shaders/: cube.glsl.zig
src/roms/: NOROM.ch8
tools/: generate_code.ps1  generate_mtb.ps1  generate_sublime_project.py  generate_sublimeproject.ps1  generate_systembff.ps1
tools/fastbuild/linux/: LICENSE.TXT
tools/fastbuild_macros/: begin_target.bff  begin_vs.bff  end_target.bff  end_vs.bff  make_target.bff
